// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render List page 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <Connect(UsersActionBar)
      onShowInvites={[Function]}
      showInvites={false}
    />
    <UsersTable
      onRemoveUser={[Function]}
      onRoleChange={[Function]}
      users={Array []}
    />
  </div>
</div>
`;

exports[`Render should render component 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <Connect(UsersActionBar)
      onShowInvites={[Function]}
      showInvites={false}
    />
    <PageLoader
      pageName="Users"
    />
  </div>
</div>
`;
